<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="24dp"
        android:orientation="vertical">

        <!--  Nama Lengkap  -->
        <TextView
            style="@style/TextProfile"
            android:text="Nama Lengkap" />

        <TextView
            android:id="@+id/text_nama_lengkap"
            style="@style/TextProfieDescription"
            android:text="@string/profile_name" />

        <!--  Email  -->
        <TextView
            style="@style/TextProfile"
            android:layout_marginTop="10dp"
            android:text="Email" />

        <TextView
            android:id="@+id/text_email"
            style="@style/TextProfieDescription"
            android:text="@string/email" />

        <!--  Alamat  -->
        <TextView
            style="@style/TextProfile"
            android:layout_marginTop="10dp"
            android:text="Alamat" />

        <TextView
            android:id="@+id/text_alamat"
            style="@style/TextProfieDescription"
            android:text="@string/alamat" />

    </LinearLayout>
</LinearLayout>
